# terc-rl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
baselines/seek/: run_experiment.py
terc/: __init__.py  estimator.py  visualization.py
terc/agents/: __init__.py  actor_critic.py  ppo.py  q_learning.py
terc/envs/: __init__.py  secret_key_game.py  tit_for_n_tats.py
terc/pipelines/: __init__.py  learning_curves.py  synthetic.py  trajectories.py
tests/: test_smoke.py
